--- a/.env
+++ b/.env
@@ -21,3 +21,7 @@ BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8000"]
 PROJECT_NAME=SDA API
 VERSION=1.0.0
 API_V1_STR=/api/v1
+
+# Server Configuration
+SERVER_HOST=153.92.223.91
+SERVER_PORT=8000
