--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: bash -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - .:/app
-      - uploaded_files:/app/resources
+      - ./uploads:/app/uploads
     ports:
       - "8000:8000"
     environment:
@@ -58,5 +58,4 @@ networks:
 
 volumes:
   postgres_data:
-  uploaded_files:
   redis_data:
