--- a/.env.local
+++ b/.env.local
@@ -1,21 +1,21 @@
 # Local Development Environment Configuration
 
-# Database Configuration
+# Database Configuration for local testing
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres123
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=sda_local_db
 
-# Direct Database URL
+# Direct Database URL for local development
 DATABASE_URL=postgresql://postgres:postgres123@localhost:5432/sda_local_db
 
-# Redis Configuration
+# Redis Configuration for local testing
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_URL=redis://localhost:6379/0
 
-# CORS Settings
+# CORS Settings - Allow frontend development server
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000", "http://localhost:8000", "http://127.0.0.1:8000"]
 
 # API Settings
@@ -23,10 +23,19 @@ PROJECT_NAME=SDA API Local
 VERSION=1.0.0
 API_V1_STR=/api/v1
 
-# Server Configuration
+# Server Configuration for local development
 SERVER_HOST=localhost
 SERVER_PORT=8000
 
-# Environment
-ENVIRONMENT=development
-DOMAIN_URL=http://localhost:8000
+# Security Settings (for local development only)
+SECRET_KEY=your-local-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Upload Configuration
+MAX_FILE_SIZE=10485760  # 10MB
+ALLOWED_EXTENSIONS=jpg,jpeg,png,gif,pdf,doc,docx
+
+# Debug Settings
+DEBUG=true
+LOG_LEVEL=debug
